[package]
name = "flow-spec"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2"
log = "0.4"
simplelog = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rusqlite = "0.25"
url = {version = "2", features = ["serde"]}